desktop-client/ironclaw/src/cli/snapshots/ironclaw__cli__tests__help_output_without_import.snap
---
source: desktop-client/ironclaw/src/cli/mod.rs
expression: help
---
Secure personal AI assistant that protects your data and expands its capabilities

Usage: ironclaw [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard
  config      Manage app configs
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  service     Manage OS service
  skills      Manage skills
  cert        Manage MITM CA trust chain
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics
  logs        View and manage gateway logs
  status      Show system status
  migrate     Migrate ~/.ironclaw -> ~/.dasclaw
  completion  Generate completions
  login       Authenticate with a provider
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only           Run in interactive CLI mode only (disable other channels)
      --no-db              Skip database connection (for testing)
  -m, --message <MESSAGE>  Single message mode - send one message and exit
  -c, --config <CONFIG>    Configuration file path (optional, uses env vars by default)
      --no-onboard         Skip first-run onboarding check
  -h, --help               Print help (see more with '--help')
  -V, --version            Print version
